[package]
name = "isolate"
version = "0.1.0"
authors = ["Undefined01 <amoscr@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
nix = "0.23"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
panic = "abort" 

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
